fix[MovieActions]: fixed buttons wrapping on mobile

--- a/src/widgets/movie-detail/ui/movie-actions/MovieActions.module.scss
+++ b/src/widgets/movie-detail/ui/movie-actions/MovieActions.module.scss
@@ -6,11 +6,11 @@
   display: flex;
   gap: 16px;
 
-  &:has(.movieDetail__randomButton) {
+  &:has(.movieActions__randomButton) {
     @include m.mobile {
       flex-wrap: wrap;
 
-      .movieDetail__aboutButton {
+      .movieActions__aboutButton {
         flex: 1 0 fit-content;
         padding-inline: 20px;
       }
@@ -20,7 +20,7 @@
       column-gap: 0;
       justify-content: space-between;
 
-      .movieDetail__aboutButton {
+      .movieActions__aboutButton {
         flex-grow: 0;
         flex-shrink: 1;
       }
